fixtures/invalid/bad-nav-slot.mu
@nav label="Docs" href="index.html" slot="sidebar"
